Updated Review Page UI

--- a/KnowItAll/ReviewPage.storyboard
+++ b/KnowItAll/ReviewPage.storyboard
@@ -26,17 +26,17 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Star Wars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qu3-W3-nHj">
-                                            <rect key="frame" x="8" y="0.0" width="251" height="38"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Star Wars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qu3-W3-nHj">
+                                            <rect key="frame" x="15" y="15" width="144.5" height="38"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="38" id="rne-7A-xs9"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="32"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30 Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gps-wz-WNE">
-                                            <rect key="frame" x="8" y="60" width="88" height="21"/>
+                                            <rect key="frame" x="15" y="64" width="88" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="F9C-5P-1cm"/>
                                                 <constraint firstAttribute="width" constant="88" id="FxY-Bd-btP"/>
@@ -46,7 +46,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f4h-ZO-Xz4" customClass="CosmosView" customModule="Cosmos">
-                                            <rect key="frame" x="8" y="100" width="120" height="20"/>
+                                            <rect key="frame" x="15" y="100" width="120" height="20"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="120" id="d7e-T6-6XT"/>
@@ -86,14 +86,14 @@
                                             </constraints>
                                         </view>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Entertainment" translatesAutoresizingMaskIntoConstraints="NO" id="8HU-UB-45K">
-                                            <rect key="frame" x="292" y="0.0" width="75" height="75"/>
+                                            <rect key="frame" x="275" y="5" width="80" height="80"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="75" id="Mh8-fL-PcQ"/>
-                                                <constraint firstAttribute="height" constant="75" id="hNj-ir-G8X"/>
+                                                <constraint firstAttribute="width" constant="80" id="Mh8-fL-PcQ"/>
+                                                <constraint firstAttribute="height" constant="80" id="hNj-ir-G8X"/>
                                             </constraints>
                                         </imageView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BO5-HK-J0s">
-                                            <rect key="frame" x="267" y="95" width="100" height="30"/>
+                                            <rect key="frame" x="265" y="90" width="100" height="30"/>
                                             <color key="backgroundColor" red="0.81949108839999996" green="0.202750653" blue="0.29063361879999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="100" id="3jg-2p-cNC"/>
@@ -108,19 +108,18 @@
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstItem="Gps-wz-WNE" firstAttribute="top" secondItem="qu3-W3-nHj" secondAttribute="bottom" constant="22" id="60I-OD-ALZ"/>
                                         <constraint firstAttribute="bottom" secondItem="G4P-nq-Vva" secondAttribute="bottom" id="Mgz-sH-Tg4"/>
                                         <constraint firstAttribute="trailing" secondItem="G4P-nq-Vva" secondAttribute="trailing" id="Qgk-ox-Iip"/>
-                                        <constraint firstItem="8HU-UB-45K" firstAttribute="top" secondItem="X1q-AO-P9c" secondAttribute="top" id="TfY-c6-NFV"/>
-                                        <constraint firstItem="f4h-ZO-Xz4" firstAttribute="top" secondItem="Gps-wz-WNE" secondAttribute="bottom" constant="19" id="Tzc-JB-crn"/>
-                                        <constraint firstAttribute="trailing" secondItem="BO5-HK-J0s" secondAttribute="trailing" constant="8" id="VN8-3g-ni6"/>
+                                        <constraint firstItem="qu3-W3-nHj" firstAttribute="top" secondItem="X1q-AO-P9c" secondAttribute="top" constant="15" id="Sdu-5Q-cw9"/>
+                                        <constraint firstItem="8HU-UB-45K" firstAttribute="top" secondItem="X1q-AO-P9c" secondAttribute="top" constant="5" id="TfY-c6-NFV"/>
+                                        <constraint firstItem="f4h-ZO-Xz4" firstAttribute="top" secondItem="Gps-wz-WNE" secondAttribute="bottom" constant="15" id="Tzc-JB-crn"/>
+                                        <constraint firstAttribute="trailing" secondItem="BO5-HK-J0s" secondAttribute="trailing" constant="10" id="VN8-3g-ni6"/>
                                         <constraint firstItem="G4P-nq-Vva" firstAttribute="top" secondItem="f4h-ZO-Xz4" secondAttribute="bottom" constant="10" id="YOm-Wf-n59"/>
-                                        <constraint firstItem="Gps-wz-WNE" firstAttribute="leading" secondItem="X1q-AO-P9c" secondAttribute="leading" constant="8" id="fsB-82-n5F"/>
-                                        <constraint firstAttribute="trailing" secondItem="8HU-UB-45K" secondAttribute="trailing" constant="8" id="hh2-rW-JOf"/>
-                                        <constraint firstItem="qu3-W3-nHj" firstAttribute="top" secondItem="X1q-AO-P9c" secondAttribute="top" id="jQO-i9-vBz"/>
-                                        <constraint firstItem="qu3-W3-nHj" firstAttribute="leading" secondItem="X1q-AO-P9c" secondAttribute="leading" constant="8" id="lkw-VM-JtL"/>
-                                        <constraint firstItem="G4P-nq-Vva" firstAttribute="top" secondItem="BO5-HK-J0s" secondAttribute="bottom" constant="5" id="pVq-8X-Fl1"/>
-                                        <constraint firstItem="f4h-ZO-Xz4" firstAttribute="leading" secondItem="X1q-AO-P9c" secondAttribute="leading" constant="8" id="rcY-K2-xz1"/>
+                                        <constraint firstItem="Gps-wz-WNE" firstAttribute="leading" secondItem="X1q-AO-P9c" secondAttribute="leading" constant="15" id="fsB-82-n5F"/>
+                                        <constraint firstAttribute="trailing" secondItem="8HU-UB-45K" secondAttribute="trailing" constant="20" id="hh2-rW-JOf"/>
+                                        <constraint firstItem="qu3-W3-nHj" firstAttribute="leading" secondItem="X1q-AO-P9c" secondAttribute="leading" constant="15" id="lkw-VM-JtL"/>
+                                        <constraint firstItem="G4P-nq-Vva" firstAttribute="top" secondItem="BO5-HK-J0s" secondAttribute="bottom" constant="10" id="pVq-8X-Fl1"/>
+                                        <constraint firstItem="f4h-ZO-Xz4" firstAttribute="leading" secondItem="X1q-AO-P9c" secondAttribute="leading" constant="15" id="rcY-K2-xz1"/>
                                         <constraint firstItem="G4P-nq-Vva" firstAttribute="leading" secondItem="X1q-AO-P9c" secondAttribute="leading" id="tWL-ev-zNo"/>
                                     </constraints>
                                 </view>
